packages/swirl-components/src/styles/global.css
@import "~@getflip/swirl-tokens/dist/css/styles.light.custom-properties.css";
@import "~@getflip/swirl-tokens/dist/css/styles.dark.custom-properties.css";
@import "./media-queries.css";
@import "./disable-desktop-style-tweaks.css";

@font-face {
  font-family: "Inter var experimental";
  font-style: normal;
  font-weight: 100 900;
  font-display: swap;
  src: url("/fonts/Inter.var.woff2") format("woff2-variations"),
    url("/fonts/Inter.var.woff2") format("woff2");
}

@font-face {
  font-family: "Inter var experimental";
  font-style: italic;
  font-weight: 100 900;
  font-display: swap;
  src: url("/fonts/Inter-italic.var.woff2") format("woff2-variations"),
    url("/fonts/Inter-italic.var.woff2") format("woff2");
}

:root {
  --swirl-accordion-item-toggle-default: transparent;
  --swirl-accordion-item-toggle-hovered: var(--s-state-hovered);
  --swirl-accordion-item-toggle-pressed: var(--s-state-pressed);

  --swirl-autocomplete-tags-margin-top: 0;

  --swirl-avatar-group-border-color: var(--s-background-default);
  --swirl-avatar-background-color: var(--s-surface-raised-default);

  --swirl-badge-border-color: var(--s-background-default);

  --swirl-button-border-top-right-radius: var(--s-border-radius-base);
  --swirl-button-border-top-left-radius: var(--s-border-radius-base);
  --swirl-button-border-bottom-right-radius: var(--s-border-radius-base);
  --swirl-button-border-bottom-left-radius: var(--s-border-radius-base);
  --swirl-tag-background-default: var(--s-surface-raised-default);

  --swirl-card-background-default: var(--s-surface-default);
  --swirl-card-background-hovered: var(--s-surface-hovered);
  --swirl-card-background-pressed: var(--s-surface-pressed);

  --swirl-carousel-gradient: 255, 255, 255;

  --swirl-icon-button-border-top-right-radius: 50%;
  --swirl-icon-button-border-top-left-radius: 50%;
  --swirl-icon-button-border-bottom-right-radius: 50%;
  --swirl-icon-button-border-bottom-left-radius: 50%;

  --swirl-app-icon-size: 1.25rem;

  --swirl-flat-button-background-default: var(--s-action-neutral-default);
  --swirl-flat-button-background-disabled: var(--s-action-neutral-disabled);
  --swirl-flat-button-background-hovered: var(--s-action-neutral-hovered);
  --swirl-flat-button-background-pressed: var(--s-action-neutral-pressed);

  --swirl-ghost-button-background-default: transparent;
  --swirl-ghost-button-background-disabled: var(--s-background-default);
  --swirl-ghost-button-background-hovered: var(--s-state-hovered);
  --swirl-ghost-button-background-pressed: var(--s-state-pressed);

  --swirl-plain-button-text-color-default: var(--s-interactive-neutral-default);
  --swirl-plain-button-text-color-disabled: var(
    --s-interactive-neutral-disabled
  );
  --swirl-plain-button-text-color-hovered: var(--s-interactive-neutral-hovered);
  --swirl-plain-button-text-color-pressed: var(--s-interactive-neutral-pressed);

  --swirl-resource-list-item-background-default: transparent;
  --swirl-resource-list-item-background-hovered: var(--s-state-hovered);
  --swirl-resource-list-item-background-pressed: var(--s-state-pressed);

  --swirl-table-sticky-left-shadow: none;
  --swirl-table-sticky-right-shadow: none;
  --swirl-table-moving-row-border: none;

  --swirl-tab-bar-border-width: var(--s-border-width-default);
  --swirl-tab-bar-height: auto;

  --swirl-text-input-placeholder-size: var(--s-font-size-base);

  --swirl-form-control-label-background-color: transparent;

  @media (--from-desktop-without-touch) {
    --swirl-button-border-top-right-radius: var(--s-border-radius-sm);
    --swirl-button-border-top-left-radius: var(--s-border-radius-sm);
    --swirl-button-border-bottom-right-radius: var(--s-border-radius-sm);
    --swirl-button-border-bottom-left-radius: var(--s-border-radius-sm);
  }
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html.theme-dark {
  --swirl-carousel-gradient: 25, 26, 28;
  color-scheme: dark;
}

body {
  color: var(--s-text-default);
  background-color: var(--s-background-default);
  font-family: var(--s-font-family-text);
  font-size: var(--s-font-size-base);
  font-weight: var(--s-font-weight-normal);
  font-variation-settings: "slnt" 0;

  -webkit-font-smoothing: antialiased;
}

b,
strong {
  font-weight: var(--s-font-weight-semibold);
}

dl,
dd,
dt {
  margin: 0;
  padding: 0;
}

/*
 * Sometimes a swirl-popover is slotted into a swirl-resource-list-item control
 * slot. The controls pointer events are disabled if the item is not hovered or
 * focused. This means that the popover will not be clickable if the item is not
 * hovered or focused. This style ensures that the popover is clickable even if
 * the item is not hovered or focused.
*/
swirl-resource-list-item swirl-popover {
  pointer-events: auto;
}

/* Responsive design helper classes to hide elements for specific viewports */

.hide-from-mobile {
  @media (--from-mobile) {
    display: none;
  }
}

.hide-from-tablet {
  @media (--from-tablet) {
    display: none;
  }
}

.hide-from-desktop {
  @media (--from-desktop) {
    display: none;
  }
}

.hide-from-large-desktop {
  @media (--from-large-desktop) {
    display: none;
  }
}

.hide-from-larger-desktop {
  @media (--from-larger-desktop) {
    display: none;
  }
}

.hide-to-tablet {
  @media (--to-tablet) {
    display: none;
  }
}

.hide-to-desktop {
  @media (--to-desktop) {
    display: none;
  }
}

.hide-to-large-desktop {
  @media (--to-large-desktop) {
    display: none;
  }
}

.hide-to-larger-desktop {
  @media (--to-larger-desktop) {
    display: none;
  }
}

